@@ -1,6 +1,8 @@
-DIST duplicati-bin-2.0.2.1_beta20170801.rpm 7447686 SHA256 572a8a341a0783ed952a02ed9307f709d06e0f2004e13f626eb00ae3c554cb84 SHA512 372603b8e48111e430403421ac8c611932534e5343564abf4c9ebf297b002de83d771cda4544c59a78d6faf3b794882265a75c669f19f17f2c6fb91fa64e16b5 WHIRLPOOL aecbe49812f57551943d86916ee4d7d60e478e2ebb2bd738f1a9088e924de423d22b5d0a3b8334edd2870a3903a0c16f89f7341f41df78477ca222c9e4a30ff2
-DIST duplicati-bin-2.0.3.3_beta20180402.rpm 7721946 SHA256 21c01fdae9a41fc2780f59c956422c99c7404c61e203bc41a1c3d18eb5c760f8 SHA512 79cb885700246aeffb3167f06500073c153a470dfe62938ef3f5a3dd608de4882f8b437bf34541500a68b24cb64938da224cdb6f3205ab53fe2a5b9a90367201 WHIRLPOOL e435c022549c723fecfb9b693110645e6f6e8c04199700c160a73fab3c168bada95b55da298fae66c2fa23b61ff7c3f0b9e3c5c7f819de4b1708af4a95500e31
-EBUILD duplicati-bin-2.0.2.1_beta20170801-r1.ebuild 810 SHA256 5fa5e948629f799ad9bde6358b6eb675db1967ea374366ab580c4726c28d3d43 SHA512 63d09f04a6929601455df4c2d09ee016d06f9bac14ec348613d96e3102e6caa507b2d63d8eb8cff95acff861221e338cec4c0ed3ab79d11a3c616556cf3d1a3f WHIRLPOOL 219024aa14404567144c8011fafb4da9ae310c6f0b69c4918e052f767864783f2f809872a5bd47fe352945c60e50f29956317b075499b66e37765c160238687b
-EBUILD duplicati-bin-2.0.3.3_beta20180402.ebuild 810 SHA256 547d3837beecd47c8af8959cf13424cfed0fe64d509847795dc5219f261e3840 SHA512 6219b17de7b683961e1db84f9f050518d8170b30c84ef6bf71d350ce2f479c333ff981d074597088acd935fd299c433693eb57c8597e34b9f41c1c4e5402cf96 WHIRLPOOL 85f4a2bccef219daba9cb9411a23b1187a8bb3ea53c89070c1cb97d616a1e700290e68adfd2fba61e1dec1689a21fde8c6310d03288774bbe40cbf3af575777b
-MISC ChangeLog 1135 SHA256 8cb1984eb54464e4d98262e51c0a3193d8da3f723a5b5fbcf437e8f4ca9d29f4 SHA512 023d26cc4c8cb2764acacc3fd74c7fd0437dbae96f44d507987d899fbe00a917c5d9195540e3e31fd7a670f236d59d60bc0254d64df985aabd041feec7e8661e WHIRLPOOL 8da4e8d131a49c285caf7d7f1d40d4e7199ca7b3b353b3c7b55d3c9b7cf6ee5b113f0a3551a85dde8feafcdc9be1e51293ff5fa578fc388c30417b9f6cbcf453
-MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
+DIST duplicati-bin-2.0.2.1_beta20170801.rpm 7447686 BLAKE2B b3053638de7390ee35162a6cb184c323c908b7e9b1f3ee7f8556c93e10836740245c6b667c6ca8ea2674c2ca3303859992acded80a6db98750f8425f8b5d9e4d SHA512 372603b8e48111e430403421ac8c611932534e5343564abf4c9ebf297b002de83d771cda4544c59a78d6faf3b794882265a75c669f19f17f2c6fb91fa64e16b5
+DIST duplicati-bin-2.0.3.3_beta20180402.rpm 7721946 BLAKE2B f69418f750fe7ad0011043db2e6a7463d9be8ea099837cc3d16e144eb626fed90a22cec4fb3767796cdde13583943106f528c1c27883a2f2a56ff62c45312ab9 SHA512 79cb885700246aeffb3167f06500073c153a470dfe62938ef3f5a3dd608de4882f8b437bf34541500a68b24cb64938da224cdb6f3205ab53fe2a5b9a90367201
+DIST duplicati-bin-2.0.4.5_beta20181128.rpm 7973320 BLAKE2B 01488719d6e5b18a5b3a3b76499b52d63038cb818b3629989edd7b354b9b86927328eab978d3ab7cd7fe284b4cf720bb2f311c85709819a5eff33b7e44ed94e9 SHA512 63c6a66895844238f5b2b3b045f9efdb91308c26c57a50905ab3180bfa3e304467b29dfd2d03a6142b852f228740e25787978a30950f01c8ce738e0ed4510fa5
+EBUILD duplicati-bin-2.0.2.1_beta20170801-r1.ebuild 810 BLAKE2B b6d87ebe3dfc774cc96c68f8aab6252a555e12a53ab397810e8f5220b9839a2619f177f76949a6035e1e12997f8d5a59287ff452612661d89f461c72a0ac534a SHA512 63d09f04a6929601455df4c2d09ee016d06f9bac14ec348613d96e3102e6caa507b2d63d8eb8cff95acff861221e338cec4c0ed3ab79d11a3c616556cf3d1a3f
+EBUILD duplicati-bin-2.0.3.3_beta20180402.ebuild 810 BLAKE2B 5236fca39a06fd731d880228553390a22d1c8542404e0b3ca66f87399d1a996127a412d630964a6f27278a4be53c8350ade260d56c98755451d110d2853035be SHA512 6219b17de7b683961e1db84f9f050518d8170b30c84ef6bf71d350ce2f479c333ff981d074597088acd935fd299c433693eb57c8597e34b9f41c1c4e5402cf96
+EBUILD duplicati-bin-2.0.4.5_beta20181128.ebuild 868 BLAKE2B 70292a041361f617730953621812a497d3b0565ca6b5b8fa0e9370bc4d19dc5d03fb6485907bd5da69bed6d092ae194d044964897df62b2e5c5bc9ed95fe419d SHA512 1344a1b2a8031fb646ad8bb2722864f277dbe31236aee7bc179f9efbd1dc3a1bda04bee20a05f9b2cf1363dd1792256ff478ec921a572564ced5a4b745951b96
+MISC ChangeLog 1358 BLAKE2B 6327552f45590fd54d0da291873ecef3e7c414389308e77aa7cd065e53a5c729b6840c632aecd6fe986da50ef0835df104a708a30f0d84a4f4a2e7e7f840f294 SHA512 36c8c10fec7be96cb1c64ce15a06fdd9982f46638446e5bcb571fde4dd74953132a6380685d6485e0e4d2d04d2f8b58f9684c945c667450f04ff1019cb794f69
+MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
